# GraphicsEditorArchitecture

./: CMakeLists.txt  Observable.h  Observer.h  README.md  Untitled Diagram.drawio  color.cpp  color.h  graphics_controller.cpp  graphics_controller.h  graphics_editor_controller.cpp  graphics_editor_controller.h  graphics_editor_model.cpp  graphics_editor_model.h  graphics_item.cpp  graphics_item.h  graphics_model.cpp  graphics_model.h  graphics_view.cpp  graphics_view.h  main.cpp  main_window.cpp  main_window.h  point.cpp  point.h  rect.cpp  rect.h  tablemodel.cpp  tablemodel.h
Commands/: commands.cpp  commands.h  file_command.cpp  file_command.h  shape_command.cpp  shape_command.h
Data/: document.cpp  document.h  file_handling_visitor.cpp  file_handling_visitor.h  visitor.h
GraphicsShapes/: circle.cpp  circle.h  dot.cpp  dot.h  graphics_shape.cpp  graphics_shape.h  rectangle.cpp  rectangle.h
